# task_time

./: .gitignore  BUILDING.md  DESIGN_NOTES.md  README.md  pyproject.toml  requirements.txt  run_task_timer.py  task_timer.spec
scripts/: build.ps1  run.ps1
src/task_timer/: __init__.py  app.py  backups.py  dialogs.py  exporter.py  main.py  mini_mode.py  models.py  settings.py  storage.py  time_utils.py
tests/: test_app_ui.py  test_backups.py  test_exporter.py  test_root_launcher.py  test_settings.py  test_storage.py  test_time_utils.py  test_timeline_corrections.py  test_timeline_dialog_and_formatting.py
