[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-timer"
version = "0.1.0"
description = "Local event-sourced tkinter task timer"
requires-python = ">=3.11"
dependencies = [
    "tkcalendar>=1.6.1",
    "tkTimePicker>=2.0.2",
    "tzlocal>=5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
